--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ if(targetObj.style.display!="none"){
 						<h4>3DN: 3D Deformation Network</h4>
 						<p2><b>Weiyue Wang</b>, Duygu Ceylan, Radomír Měch and Ulrich Neumann</p2>
 						<p2 class="subDetails">IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2019</p2>
-						<p2> <a href="https://arxiv.org/abs/1903.03322">paper</a> | <a href="###" onclick="openShutManager(this,'3dnbib')">bibtex</a> | <a href="https://github.com/laughtervv/3DN">code</a> </p2><p2>We cannot make our code public on github due to Adobe code release policy. Please email both <a href="mailto:ceylan@adobe.com">Duygu</a> and we will prepare a code release form and share the code to you. </p2>
+						<p2> <a href="https://arxiv.org/abs/1903.03322">paper</a> | <a href="###" onclick="openShutManager(this,'3dnbib')">bibtex</a> | <a href="https://github.com/laughtervv/3DN">code</a> </p2>
 						<div id="3dnbib" style="display:none">
 						<pre p>
 @inproceedings{wang20193dn,
