--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ if(targetObj.style.display!="none"){
 				</div>
 				
 				<div class="sectionContent1">
-					<p>I'm a fourth-year Ph.D. student at University of Southern California, working in Computer Graphics and Immersive Technologies Lab under Prof. Ulrich Neumann. </p>
+					<p>I'm a software engineer at Waymo. Before that, I was a Ph.D. student at University of Southern California, working in Computer Graphics and Immersive Technologies Lab under Prof. Ulrich Neumann. </p>
 					<p> My research focuses on computer vision, particularly 3D scene understanding and reconstruction.</p>
 				</div>
 			</article>
@@ -114,15 +114,15 @@ if(targetObj.style.display!="none"){
 					<div class="subsectionContent">
 						<h4>DISN: Deep Implicit Surface Network for High-quality Single-view 3D Reconstruction</h4>
 						<p2><b>Weiyue Wang*</b>, Qiangeng Xu*, Duygu Ceylan, Radomír Měch and Ulrich Neumann </p2>
-						<p2 class="subDetails">arxiv preprint, 2019</p2>
+						<p2 class="subDetails">Neural Information Processing Systems (NeurIPS)</p2>
 						<p2> <a href="https://arxiv.org/pdf/1905.10711.pdf">paper</a> | <a href="###" onclick="openShutManager(this,'3dnbib')">bibtex</a> | <a href="https://github.com/laughtervv/DISN">code</a> | <a href="papers/neurips_2019_supp.pdf">supplementary</a></p2>
 						<p2>* equal contributions</p2>
-						<div id="3dnbib" style="display:none">
+						<div id="disnbib" style="display:none">
 						<pre p>
-@article{wang2019DISN,
+@inproceedings{wang2019DISN,
     title={DISN: Deep Implicit Surface Network for High-quality Single-view 3D Reconstruction},
     author={Wang, Weiyue and Qiangeng, Xu and Ceylan, Duygu and Mech, Radomir and Neumann, Ulrich},
-    journal={arXiv preprint arXiv:1905.10711},
+    booktitle={NerIPS},
     year={2019}
 }
 						</pre>
