--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ if(targetObj.style.display!="none"){
 						<h4>DISN: Deep Implicit Surface Network for High-quality Single-view 3D Reconstruction</h4>
 						<p2><b>Weiyue Wang*</b>, Qiangeng Xu*, Duygu Ceylan, Radomír Měch and Ulrich Neumann </p2>
 						<p2 class="subDetails">Neural Information Processing Systems (NeurIPS)</p2>
-						<p2> <a href="https://arxiv.org/pdf/1905.10711.pdf">paper</a> | <a href="###" onclick="openShutManager(this,'3dnbib')">bibtex</a> | <a href="https://github.com/laughtervv/DISN">code</a> | <a href="papers/neurips_2019_supp.pdf">supplementary</a></p2>
+						<p2> <a href="https://arxiv.org/pdf/1905.10711.pdf">paper</a> | <a href="###" onclick="openShutManager(this,'disnbib')">bibtex</a> | <a href="https://github.com/laughtervv/DISN">code</a> | <a href="papers/neurips_2019_supp.pdf">supplementary</a></p2>
 						<p2>* equal contributions</p2>
 						<div id="disnbib" style="display:none">
 						<pre p>
