--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ if(targetObj.style.display!="none"){
 @inproceedings{wang2019DISN,
     title={DISN: Deep Implicit Surface Network for High-quality Single-view 3D Reconstruction},
     author={Wang, Weiyue and Qiangeng, Xu and Ceylan, Duygu and Mech, Radomir and Neumann, Ulrich},
-    booktitle={NerIPS},
+    booktitle={NeurIPS},
     year={2019}
 }
 						</pre>
