--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ if(targetObj.style.display!="none"){
 				<div class="sectionContent1">
 					<p>I'm a software engineer at Waymo. Before that, I was a Ph.D. student at University of Southern California, working in Computer Graphics and Immersive Technologies Lab under Prof. Ulrich Neumann. </p>
 					<p> My research focuses on computer vision, particularly 3D scene understanding and reconstruction.</p>
-					<p> Please reach out to me if you're interested in Perception Internship @ Waymo 2021.</p>
+					<p> Please reach out to me if you're interested in 2021 Summer Internship @ Waymo Perception.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
