--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@ if(targetObj.style.display!="none"){
 			</h6>
 
 			<ul class="quickFade ">
-				<li>Email: weiyuewa at usc dot edu</li>
-				<li>Address: 3737 Watt Way, <br> 
-				&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;PHE 108, <br> 
-				&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Los Angeles, CA</li>
+				<li>Email: weiyuewang at waymo dot com</li>
 			</ul>
 
 		</div>
