--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ if(targetObj.style.display!="none"){
 			</h6>
 
 			<ul class="quickFade ">
-				<li>Email: weiyuewang at waymo dot com</li>
+				<li>Email: wweiyue at gmail dot com</li>
 			</ul>
 
 		</div>
